# schess

./: CMakeLists.txt  README.md
include/: buffer_object.h  game_logic.h  renderer.h  schess.h  shader.h  texture.h  uniform.h  utility.h  vertex_array_object.h
res/: fragment.glsl  vertex.glsl
src/: buffer_object.cpp  game_logic.cpp  main.cpp  renderer.cpp  schess.cpp  shader.cpp  texture.cpp  utility.cpp  vertex_array_object.cpp
